// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ContentSidebar/Skills/Transcript/Transcript should correctly render editable Transcript when editable and editmode 1`] = `
<div
  className="be-transcript"
>
  <div
    className="be-transcript-actions"
  >
    <PlainButton
      className="be-transcript-copy"
      getDOMRef={[Function]}
      onClick={[Function]}
      type="button"
    >
      <IconCopy
        color="#999"
      />
    </PlainButton>
    <PlainButton
      className="be-transcript-edit"
      data-resin-target="skill-transcriptedit"
      onClick={[Function]}
      type="button"
    >
      <IconEdit />
    </PlainButton>
  </div>
  <div
    className="be-transcript-content-collapsed"
  >
    <TranscriptRow
      interactionTarget="skill-transcript"
      isEditing={false}
      key="0"
      onCancel={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onSave={[Function]}
      text="foo"
    />
    <TranscriptRow
      interactionTarget="skill-transcript"
      isEditing={false}
      key="1"
      onCancel={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onSave={[Function]}
      text="bar"
    />
  </div>
</div>
`;

exports[`components/ContentSidebar/Skills/Transcript/Transcript should correctly render error mask when no Transcript 1`] = `
<div
  className="be-transcript"
>
  <FormattedMessage
    defaultMessage="We’re sorry, no skills information was found."
    id="be.skillNoInfoFoundError"
  />
</div>
`;

exports[`components/ContentSidebar/Skills/Transcript/Transcript should correctly render expand button 1`] = `
<div
  className="be-transcript"
>
  <div
    className="be-transcript-actions"
  >
    <PlainButton
      className="be-transcript-copy"
      getDOMRef={[Function]}
      onClick={[Function]}
      type="button"
    >
      <IconCopy
        color="#999"
      />
    </PlainButton>
    <PlainButton
      className="be-transcript-expand"
      onClick={[Function]}
      type="button"
    >
      <IconExpand
        color="#999"
      />
    </PlainButton>
    <PlainButton
      className="be-transcript-edit"
      data-resin-target="skill-transcriptedit"
      onClick={[Function]}
      type="button"
    >
      <IconEdit />
    </PlainButton>
  </div>
  <div
    className="be-transcript-content-collapsed"
  >
    <TranscriptRow
      interactionTarget="skill-transcript"
      isEditing={false}
      key="0"
      onCancel={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onSave={[Function]}
      text="foo"
    />
    <TranscriptRow
      interactionTarget="skill-transcript"
      isEditing={false}
      key="1"
      onCancel={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onSave={[Function]}
      text="bar"
    />
    <TranscriptRow
      interactionTarget="skill-transcript"
      isEditing={false}
      key="2"
      onCancel={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onSave={[Function]}
      text="bar1"
    />
    <TranscriptRow
      interactionTarget="skill-transcript"
      isEditing={false}
      key="3"
      onCancel={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onSave={[Function]}
      text="bar2"
    />
    <TranscriptRow
      interactionTarget="skill-transcript"
      isEditing={false}
      key="4"
      onCancel={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onSave={[Function]}
      text="bar3"
    />
    <TranscriptRow
      interactionTarget="skill-transcript"
      isEditing={false}
      key="5"
      onCancel={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onSave={[Function]}
      text="bar4"
    />
  </div>
</div>
`;

exports[`components/ContentSidebar/Skills/Transcript/Transcript should correctly render read only Transcript when not editable 1`] = `
<div
  className="be-transcript"
>
  <div
    className="be-transcript-actions"
  >
    <PlainButton
      className="be-transcript-copy"
      getDOMRef={[Function]}
      onClick={[Function]}
      type="button"
    >
      <IconCopy
        color="#999"
      />
    </PlainButton>
  </div>
  <div
    className="be-transcript-content-collapsed"
  >
    <TranscriptRow
      interactionTarget="skill-transcript"
      isEditing={false}
      key="0"
      onCancel={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onSave={[Function]}
      text="foo"
    />
    <TranscriptRow
      interactionTarget="skill-transcript"
      isEditing={false}
      key="1"
      onCancel={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onSave={[Function]}
      text="bar"
    />
  </div>
</div>
`;

exports[`components/ContentSidebar/Skills/Transcript/Transcript should correctly render when isLoading is true 1`] = `
<div
  className="be-transcript"
>
  <div
    className="be-transcript-content-collapsed"
  >
    <TranscriptRow
      interactionTarget="skill-transcript"
      isEditing={false}
      key="0"
      onCancel={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onSave={[Function]}
      text="foo"
    />
    <TranscriptRow
      interactionTarget="skill-transcript"
      isEditing={false}
      key="1"
      onCancel={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onSave={[Function]}
      text="bar"
    />
  </div>
  <SkillsBusyIndicator />
</div>
`;
